--- a/Week-1/Assignment/index.css
+++ b/Week-1/Assignment/index.css
@@ -13,7 +13,6 @@
   flex-wrap: wrap;
   align-content: space-around;
   width: 3%;
-  height: 100vh;
   padding: 0 10px;
   /* justify-content: center; */
   background-color: rgb(197, 197, 197);
@@ -33,9 +32,7 @@
 }
 
 .header-Content {
-  /* display: flex;
-  flex-wrap: wrap;
-  align-content: space-around; */
+  margin-left: 30px;
   color: white;
 }
 
@@ -48,4 +45,60 @@
   border: 0;
   background: none;
   /* margin: 0px 10px; */
+}
+
+.control-btn {
+  margin-top: 73px;
+}
+
+.control-btn > button {
+  color: white;
+  margin: 0px 10px;
+}
+
+.song-table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.song-table > th,
+td {
+  text-align: left;
+  padding: 8px;
+}
+
+.song-table tr:nth-child(even) {
+  background-color: #cecece;
+}
+.table-btn {
+  border: 1px solid black;
+  background: white;
+  color: blue;
+  padding: 2px;
+  font-weight: bold;
+}
+
+.footer-side {
+  background: #4747fb;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-side > div > img {
+  height: 80px;
+  width: 80px;
+}
+
+.group-btn {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.group-btn > button {
+    background: none;
+    border: none;
+    color: white;
 }
