--- a/Week-2/Assignment 2.1/css/index.css
+++ b/Week-2/Assignment 2.1/css/index.css
@@ -10,10 +10,6 @@
   margin: 0 auto;
 }
 
-.col {
-  display: flex;
-  flex-direction: row;
-}
 .text-center {
   text-align: center;
 }
@@ -35,6 +31,7 @@
   text-align: center;
   margin: 60px 0px;
 }
+
 .mt-15 {
   margin-top: 15px;
 }
@@ -72,9 +69,9 @@
   .container {
     width: 100%;
   }
-
-  .left-Side,
-  .right-Side {
+  .demoImg > img {
+    height: 160px;
+    width: auto;
   }
 }
 
@@ -83,10 +80,9 @@
   .container {
     width: 750px;
   }
-  .left-Side,
-  .right-Side {
-    display: inline;
-    width: 45%;
+  .demoImg > img {
+    height: 200px;
+    width: auto;
   }
 }
 
@@ -96,12 +92,24 @@
     width: 970px;
     flex-direction: column;
   }
+  .row {
+    display: flex;
+  }
+
+  .demoImg > img {
+    height: 250px;
+    width: auto;
+  }
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
+  }
+  .demoImg > img {
+    height: 300px;
+    width: auto;
   }
 }
 
